--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,86 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header{
+  background-color: orange;
+  height: 100px;
+}
+.logo-name{
+  float: left;
+    margin-left: 2%;
+}
+
+.cart-div{
+  float: right;
+  margin: 25px;
+  position: relative;
+  right: 3%;
+}
+.cart-div img{
+  width: 54px;
+}
+.cart-div span{
+  position: absolute;
+  color: aliceblue;
+  padding: 0 5px;
+  background-color: black;
+  border-radius: 50%;
+  top: -10%;
+    right: -15%;
+    font-size: 19px;
+}
+
+.product-container{
+  display: flex;
+    flex-wrap: wrap;
+}
+.product-item img{
+  height: 339px;
+}
+.product-item{
+  border: 1px solid gray;
+  margin: 2%;
+    padding: 2%;
+}
+.cart-page-container{
+  display: flex;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+.cart-page-container table{
+  width: 65%;;
+  border-collapse: collapse;
+}
+.cart-page-container table td{
+  border: 1px solid #ccc;
+  padding: 15px;
+}
+.price-details{
+  margin:0px 30px;
+}
+.price-details .adjust-price{
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #ddd;
+}
+.price-details .adjust-price span{
+  font-size: 20px;
+}
+.search-box{
+  float: left;
+    width: 45%;
+    height: 35%;
+    margin: 1.5% 15%;
+}
+.search-box input{
+  width: 100%;
+  height: 100%;
 }
